<resources>
    <string name="app_name">ONTO</string>
    <string name="main_title">Shop</string>
    <string name="article_title">Articles</string>
    <string name="offer_title">Sales</string>
    <string name="item_loading_error_btn_text">Retry</string>
    <string name="item_loading_error_text">Loading error</string>
    <string name="item_empty_text">No data</string>

    <string name="price_placeholder" translatable="false">%s ₽</string>
    <string name="page_map_title">Map</string>
    <string name="page_discount_title">Sales</string>
    <string name="page_shop_title">Shop</string>
    <string name="page_articles_title">Articles</string>
    <string name="page_user_title">User</string>
    <string name="fragment_profile_title">Profile</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_example_email" translatable="false">example@yandex.ru</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_pet_name">Pet name</string>
    <string name="add_to_cart_btn_text">Add to cart</string>
    <string name="monday_abbr">Mon</string>
    <string name="tuesday_abbr">Tue</string>
    <string name="wednesday_abbr">Wed</string>
    <string name="thursday_abbr">Thu</string>
    <string name="friday_abbr">Fri</string>
    <string name="saturday_abbr">Sat</string>
    <string name="sunday_abbr">Sun</string>
    <string name="title_fragment_article_details">About</string>
    <string name="text_intro_first" translatable="false">Быстро и легко ищите\nнеобходимый корм для ваших\nлюбимцев</string>
    <string name="text_intro_second" translatable="false">Оформляйте заказ\nв пару кликов</string>
    <string name="text_intro_third" translatable="false">Дождитесь заказа и обрадуйте\nсвоих питомцев</string>
    <string name="onto_shop" translatable="false">Pet food</string>
    <string name="onboarding_welcome_text" translatable="false">Добро\nпожаловать\nв магазин <annotation color="primary">ONTO</annotation> !</string>
    <string name="onboarding_next">Next</string>
    <string name="onboarding_skip">Skip</string>
    <string name="product_details_protein">Protein:</string>
    <string name="product_details_fat">Fat:</string>
    <string name="product_details_carbonhydrate">Carbonhydrate:</string>
    <string name="product_details_kcal">Kcal:</string>
    <string name="product_details_price">Price:</string>
    <string name="fragment_product_details_title">Product</string>
    <string name="title_cart">Cart</string>
    <string name="empty_cart_text">Empty cart</string>
    <string name="item_cart_to_shop">To shop</string>
    <string name="fragment_question_title">Question</string>
    <string name="hint_email" translatable="false">E-mail</string>
    <string name="hint_question">Message</string>
    <string name="send_question_text_btn">Send</string>
    <string name="profile_pets_title" translatable="false">Какой у вас питомец?</string>
    <string name="private_data_title" translatable="false">Личные данные</string>
    <string name="profile_address_title" translatable="false">Доставка по адресу</string>
    <string name="hint_city">City</string>
    <string name="hint_street">Street</string>
    <string name="hint_house">House</string>
    <string name="hint_building">Building</string>
    <string name="hint_apartment">Apartment</string>
    <string name="shops_warning" translatable="false">Пожалуйста разрешите использование вашего местоположения, иначе мы не сможем подобрать ближайшие магазины.</string>
    <string name="bottom_sheet_payment_title">Payment</string>
    <string name="card_number_hint">Card number</string>
    <string name="card_holder_name_hint">Card holder name</string>
    <string name="expire_hint">MM/YY</string>
    <string name="cvv_hint" translatable="false">CVV</string>
    <string name="checkout_button_text">%s₽ - checkout</string>
    <string name="pay_button_text">%s₽ - pay</string>
    <string name="order_step_text">Step %d.</string>
    <string-array name="order_description_text">
        <item>Contact details</item>
        <item>Delivery</item>
        <item>Confirmation</item>
    </string-array>
    <string name="order_step_tab_title" translatable="false">%s\n%s</string>
    <string name="repeat_order_text">Repeat</string>
    <string name="contact_details_title">Contact details</string>
    <string name="fragment_checkout">Checkout</string>
    <string name="order_checkout_next_btn">Next</string>
    <string name="product_details_description_title">Description</string>
    <string name="product_details_advantages_title">More</string>
    <string name="order_delivery_address_title">Delivery to address</string>
    <string name="order_delivery_post_title">Russian Post</string>
    <string name="order_delivery_pickup_title">Pick-up point</string>
    <string name="order_number_text">Order #%d</string>
    <string name="commentary_title">Commentary</string>
    <string name="full_name_text" translatable="false">%s %s</string>
    <string name="order_delivery_address_full">%s, %s St., %s hse, %s bldg., %s apt.</string>
</resources>