<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_map"
        android:icon="@drawable/ic_map"
        android:title="@string/page_map_title" />
    <item
        android:id="@+id/page_discount"
        android:icon="@drawable/ic_discount"
        android:title="@string/page_discount_title" />
    <item
        android:id="@+id/page_shop"
        android:icon="@drawable/ic_store"
        android:title="@string/page_shop_title" />
    <item
        android:id="@+id/page_articles"
        android:icon="@drawable/ic_articles"
        android:title="@string/page_articles_title" />
    <item
        android:id="@+id/page_user"
        android:icon="@drawable/ic_user"
        android:title="@string/page_user_title" />
</menu>